# csv-parser-ms

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py  models.py  settings.py
src/utils/: __init__.py  csv_parser_utils.py  utils.py
